# ag_dev

./: .env.example  .gitignore  AGENT_MULTIPLICATION_CHANGELOG.md  API-CONSISTENCY-REVIEW.md  Dockerfile  QUICKSTART.md  README.md  SKILL.md  clawdbot.plugin.json  config.json  docker-compose.yml  index.ts  package-lock.json  package.json  prd.json  start.sh
dashboard/: index.html
docs/: AG_DEV_RETROSPECTIVE.md  AG_DEV_V2_BLUEPRINT.md  ANALISE-AJUSTES-v1.md  ANALISE-AJUSTES-v2.md  ARCHITECT-REVIEW.md  CHECKLIST-MASTER.md  IMPLEMENTATION-CHECKLIST.md  PRD-motor-solucoes.md  QA-AUDIT-REPORT.md  REVOLUTION-CHECKLIST.md  SYSTEM-XRAY.md  V3-ROADMAP.md  claude-capabilities-CLAUDE.md  design-spec-v1.md  fallback-chains.md  google-apis-analysis.md  potentials.md
engines/: creative-factory.py  intelligence-engine.py  session-memory-manager.py
libs/claude_capabilities/: __init__.py  audio.py  compose.py  image.py  pyproject.toml  text.py  video.py
libs/claude_capabilities/claude_capabilities/: copy_frameworks.py  cost.py  keys.py  runpod_tasks.py
libs/claude_capabilities/claude_capabilities/skills/content-pack/: SKILL.md
libs/claude_capabilities/claude_capabilities/skills/tts/scripts/: generate.py
libs/claude_capabilities/skills/content-pack/scripts/: orchestrate.py
openclaw-skill/: SKILL.md
project-context/: CONSTRAINTS.md  GOALS.md  PROGRESS.md  STACK.md
scripts/: agdev.sh  cleanup.sh  dispatch-agent.sh  init-project.sh  install.sh  setup-agents.sh  start.sh
server/: agent-graph.js  memory-system.js  orchestrator.js  package-lock.json  package.json  server.js  (+11 more)
(+623 files in other folders)
