[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-capabilities"
version = "0.1.0"
description = "Intelligence layer that gives any AI agent real-world capabilities (image, audio, video, deploy)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "dis"},
]
keywords = ["ai", "agent", "capabilities", "image-generation", "tts", "copywriting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Zero required dependencies - all stdlib
# Optional deps unlock specific capabilities
[project.optional-dependencies]
tts = ["edge-tts>=6.1"]
all = ["edge-tts>=6.1"]

[project.scripts]
capabilities = "claude_capabilities.cli:main"

[project.urls]
Homepage = "https://github.com/dis-nowork/CLAUDE_CAPABILITIES"
Repository = "https://github.com/dis-nowork/CLAUDE_CAPABILITIES"

[tool.setuptools.packages.find]
include = ["claude_capabilities*"]

[tool.setuptools.package-data]
claude_capabilities = [
    "skills/*/SKILL.md",
    "data/*",
]
